[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "A bot for executing trades based on Telegram signals."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
python = "^3.12"

[tool.poetry.dependencies]
# Core dependencies
Flask = ">=2.1.3,<3.0"
gunicorn = ">=20.1.0,<21.0"
aiohttp = "3.8.1"
charset-normalizer = ">=2.0,<3.0"
python-telegram-bot = "13.15"
telethon = "1.24.0"
pyaes = "1.6.1"

# Utility libraries
requests = "2.32.3"
tzlocal = "5.2"
attrs = "24.2.0"
aiosignal = "1.3.1"
frozenlist = "1.5.0"
async-timeout = "4.0.3"
multidict = "6.1.0"
yarl = "1.18.3"
certifi = "2024.8.30"
idna = "3.10"
urllib3 = "2.2.3"

# Scheduler
APScheduler = "3.6.3"

# Miscellaneous
six = "1.16.0"
rsa = "4.9"
pyasn1 = "0.6.1"
cachetools = "4.2.2"
typing-extensions = "4.12.2"
importlib-metadata = "8.5.0"
zipp = "3.21.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"  # Example: Add testing tools here if needed
